# esp32S3-oxygen_aerator

./: README.md
main/: CMakeLists.txt  app_main.c
main/bsp/: bsp.c  bsp.h  bsp_gpio.c  bsp_gpio.h  bsp_i2c.c  bsp_i2c.h  bsp_uart.c  bsp_uart.h
main/common/: app_config.h  app_events.c  app_events.h  data_store.c  data_store.h
main/drivers/: modbus_master.c  modbus_master.h  pca9685.c  pca9685.h  screen_protocol.c  screen_protocol.h  sht30.c  sht30.h  voice_module.c  voice_module.h
main/network/: app_mqtt.c  app_mqtt.h  wifi_manager.c  wifi_manager.h
main/services/: actuator_service.c  actuator_service.h  bus_scheduler.c  bus_scheduler.h  cabin_fsm.c  cabin_fsm.h  rule_engine.c  rule_engine.h  screen_service.c  screen_service.h  sensor_service.c  sensor_service.h  timer_service.c  timer_service.h  voice_service.c  voice_service.h
