idf_component_register(
    SRCS
        "app_main.c"
        "bsp/bsp_uart.c"
        "bsp/bsp_i2c.c"
        "bsp/bsp_gpio.c"
        "drivers/modbus_master.c"
        "drivers/pca9685.c"
        "drivers/screen_protocol.c"
        "drivers/voice_module.c"
        "services/sensor_service.c"
        "services/actuator_service.c"
        "services/screen_service.c"
        "services/voice_service.c"
        "services/bus_scheduler.c"
        "services/cabin_fsm.c"
        "services/rule_engine.c"
        "services/timer_service.c"
        "network/wifi_manager.c"
        "network/app_mqtt.c"
        "common/data_store.c"
        "common/app_events.c"
        "bsp/bsp.c"
    INCLUDE_DIRS
        "."
    PRIV_REQUIRES
        spi_flash
        driver
        nvs_flash
        freertos
        esp_timer
        esp_wifi
        esp_netif
        esp_event
        mqtt
        mbedtls
        esp-tls
)
